fix(PageHeader): Fix element alignment of primaryAction CTA

--- a/packages/heartwood-components/components/03-structure/page.scss
+++ b/packages/heartwood-components/components/03-structure/page.scss
@@ -110,6 +110,7 @@
 }
 
 .page__header-title-wrapper {
+	align-items: center;
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
